--- a/style/global.css
+++ b/style/global.css
@@ -72,7 +72,7 @@ section{
     padding-left: 100px ;
     
     color: var(--light-color);
-    background-image:linear-gradient(#ffffff00 ,var(--bg-primary) 99%),url(/./assets/bg-start.jpeg);
+    background-image:linear-gradient(#ffffff00 ,var(--bg-primary) 99%),url(/assets/bg-start.jpeg);
     background-position: center;
     background-size: cover;
     text-shadow: 25px 20px 10px #02161f;
