--- a/style/global.css
+++ b/style/global.css
@@ -72,7 +72,7 @@ section{
     padding-left: 100px ;
     
     color: var(--light-color);
-    background-image:linear-gradient(#ffffff00 ,var(--bg-primary) 99%),url(./assets/bg-start.jpeg);
+    background-image:linear-gradient(#ffffff00 ,var(--bg-primary) 99%),url(../assets/bg-start.jpeg);
     background-position: center;
     background-size: cover;
     text-shadow: 25px 20px 10px #02161f;
@@ -266,7 +266,7 @@ section{
     
     background-color: #202B2F;
     
-    background-image: url(./assets/bg-project.jpg);
+    background-image: url(../assets/bg-project.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -314,7 +314,7 @@ section{
     opacity: 0.7;
     border-radius: 10px;
     border: 2px solid rgb(232, 232, 232);
-    background-image: url(./assets/project-ard-default.jpg);
+    background-image: url(../assets/project-ard-default.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
